# SekaiStandardLibrary

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
cmake/: CMakeOptions.cmake
doc/: CMakeLists.txt
examples/dummy/: CMakeLists.txt
tests/: CMakeLists.txt
